Hack more closely packed rows

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -69,26 +69,16 @@
     <thead>
     <tr>
         <td>Event</td>
+        <td></td>
+        <td></td>
     </tr>
     </thead>
     <tbody>
     <tr>
-        <td>Meta</td>
+        <td>Meta</td> <td>Issue comment</td> <td>Issues</td>
     </tr>
     <tr>
-        <td>Issue comment</td>
-    </tr>
-    <tr>
-        <td>Issues</td>
-    </tr>
-    <tr>
-        <td>Pull request</td>
-    </tr>
-    <tr>
-        <td>Push</td>
-    </tr>
-    <tr>
-        <td>Respository</td>
+        <td>Pull request</td> <td>Push</td> <td>Respository</td>
     </tr>
     </tbody>
 </table>
