fixes some links

--- a/app/views/docs/authentication-management.phtml
+++ b/app/views/docs/authentication-management.phtml
@@ -414,7 +414,7 @@ var response = await users.UpdateLabels(
 </p>
 
 <p>
-    For example, in a todo app, a user can <a href="docs/client/teams#teamsCreate">create a team</a> for one of their todo lists and <a href="/docs/client/teams#teamsCreateMembership">invite another user</a> to the team to grant the other user access.
+    For example, in a todo app, a user can <a href="/docs/client/teams#teamsCreate">create a team</a> for one of their todo lists and <a href="/docs/client/teams#teamsCreateMembership">invite another user</a> to the team to grant the other user access.
     The invited user can <a href="/docs/client/teams#teamsUpdateMembershipStatus">accept the invitation</a> to gain access.
     If the user's ever removed from the team, they'll lose access again.
 </p>  
