--- a/app/views/docs/functions-deploy.phtml
+++ b/app/views/docs/functions-deploy.phtml
@@ -71,7 +71,7 @@
 <h2><a href="#cli" id="cli">CLI</a></h2>
 <div class="notice margin-bottom-small">
   <h2>CLI Setup</h2>
-  <p>Before you can deploy with the Appwrite CLI, make sure you've <a href="docs/command-line">installed and initialized</a> the CLI.</p>
+  <p>Before you can deploy with the Appwrite CLI, make sure you've <a href="/docs/command-line">installed and initialized</a> the CLI.</p>
 </div>
 <p>
     To deploy with the Appwrite CLI, your function must be added to <code>appwrite.json</code> that tells the CLI where each function is stored.
