Fix some bits missed in the firebase docs

--- a/app/views/docs/migrations-firebase.phtml
+++ b/app/views/docs/migrations-firebase.phtml
@@ -143,12 +143,13 @@
     Click <b>Add Key</b> and select <b>Create new key</b>. Select <b>JSON</b> as the key type and click <b>Create</b>. This will download a JSON file to your computer.
   </li>
   <li>
-    Upload the JSON file to Appwrite and follow the migration wizard.
+    Upload the JSON file to Appwrite and follow the migration wizard to select which resource you need to migrate.
   </li>
   <li>
-    After completing the migration wizard, migration will begin. Return to step 4 of <a href="#migration-process">the migration steps</a>.
+    After completing the migration wizard, migration will begin. This will run in the background, you can close the browser.</a>.
   </li>
   <li>
-    Finally, add the platforms for your <a href="/docs/getting-started-for-web">Web</a>, <a href="getting-started-for-flutter/docs/getting-started-for-flutter">Flutter</a>, <a href="/docs/getting-started-for-android">Android</a>, and <a href="/docs/getting-started-for-apple">iOS</a> apps.
+    Finally, add the platforms for your <a href="/docs/getting-started-for-web">Web</a>, <a href="getting-started-for-flutter/docs/getting-started-for-flutter">Flutter</a>, <a href="/docs/getting-started-for-android">Android</a>, and <a href="/docs/getting-started-for-apple">iOS</a> apps. 
+    Also remember to <a href="/docs/permissions">add appropriate permissions</a></b> to the migrated resources to protect user data and privacy.
   </li>
 </ol>
