--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -6,7 +6,7 @@
     depending on the configured locale.
 </p>
 
-<h2><a href="#smtp" id="#smtp">Custom SMTP server</a></h2>
+<h2><a href="#smtp" id="smtp">Custom SMTP server</a></h2>
 <p>
     Appwrite Cloud has a default SMTP server to get you started.
     This SMTP server sends generic emails and doesn't allow customizing SMTP templates.
