--- a/app/views/docs/self-hosting.phtml
+++ b/app/views/docs/self-hosting.phtml
@@ -121,7 +121,7 @@
 </table>
 
 <h2><a href="#next-steps" id="next-steps">Next Steps</a></h2>
-<p>Self-hosting Appwrite gives you more configurable options. You can customize Appwrite with your choice of S3 compatible storage adaptors, email and SMS providers, functions runtimes, and more.</p>
+<p>Self-hosting Appwrite gives you more configurable options. You can customize Appwrite with your choice of S3 compatible storage adapters, email and SMS providers, functions runtimes, and more.</p>
 
 <p><a href="/docs/configuration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn about configuring Appwrite</a></p>
 
