add comments about using ngrok or another proxy

--- a/app/views/docs/authentication-management.phtml
+++ b/app/views/docs/authentication-management.phtml
@@ -204,7 +204,7 @@ let prefs = try await account.getPrefs()</code></pre>
 
 <h2><a href="#labels" id="labels">Labels</a></h2>
 <p>
-    Labels are a good way to flag a user to grant them access to resources. 
+    Labels are a good way to categorize a user to grant them access to resources. 
     For example, a <code>subscriber</code> label can be added to a user once they've purchased a subscription.
 </p>
 
