--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -33,7 +33,7 @@
 
 <h3><a href="#callback" id="callback">Callback URL</a></h3>
 <p>
-    GitHub will use <b>callback URLs</b> to communicate with Appwrite. 
+    GitHub will use <b>callback URLs</b> to redirect users back to Appwrite. 
     Set these callback URLs under <b>Identifying and authorizing users</b>.
 </p>
 <table class="full">
@@ -55,6 +55,19 @@
 <h3><a href="#post-install" id="post-install">Post Installation</a></h3>
 <p>
     Check the <b> Redirect on update</b> box under the <b>Post installation</b> section.
+</p>
+
+
+<h3><a href="#github-webhooks" id="github-webhooks">Webhook</a></h3>
+<p>
+    GitHub will notify Appwrite about events like new commits using webhooks.
+    Under <b>Webhook</b>, you need to check the <b>Active</b> checkbox.
+    You also need to set the <b>Webhook URL</b> as <code>https://[HOSTNAME_OR_IP]/v1/vcs/github/events</code>.
+</p>
+
+<p>
+    If you're running Appwrite on <code>localhost</code>, GitHub can't send requests to Appwrite through webhooks and automatic deployments won't work.
+    You'll need host Appwrite on a server or use a proxy like <a href="https://ngrok.com/">ngrok</a> to make Appwrite accessible to GitHub.
 </p>
 
 <h3><a href="#repository-permission" id="repository-permission">Repository Permissions</a></h3>
@@ -181,6 +194,7 @@
 </table>
 
 <p><a href="/docs/environment-variables"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn more about environment variables</a></p>
+
 
 <h2><a href="#functions" id="functions">Configure Function Runtimes</a></h2>
 <p>
