Apply suggestions from code review
Co-authored-by: Steven Nguyen <1477010+stnguyen90@users.noreply.github.com>

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -54,7 +54,7 @@
 
 <h3><a href="#post-install" id="post-install">Post Installation</a></h3>
 <p>
-    Check the <b> Redirect on update</b> box under the <b>Post installation</b> section.
+    Check the <b>Redirect on update</b> box under the <b>Post installation</b> section.
 </p>
 
 
@@ -76,44 +76,44 @@
 </p>
 <table class="full">
     <thead>
-    <tr>
-        <td>Permission</td>
-        <td>Access</td>
-    </tr>
+        <tr>
+            <td>Permission</td>
+            <td>Access</td>
+        </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>Administration</td>
-        <td>Read and write</td>
-    </tr>
-    <tr>
-        <td>Checks</td>
-        <td>Read and write.</td>
-    </tr>
-    <tr>
-        <td>Commit Statuses</td>
-        <td>Read and write</td>
-    </tr>
-    <tr>
-        <td>Contents</td>
-        <td>Read and write</td>
-    </tr>
-    <tr>
-        <td>Issues</td>
-        <td>Read and write</td>
-    </tr>
-    <tr>
-        <td>Metadata</td>
-        <td>Read-only</td>
-    </tr>
-    <tr>
-        <td>Pull requests</td>
-        <td>Read and write</td>
-    </tr>
-    <tr>
-        <td>Webhooks</td>
-        <td>Read and write</td>
-    </tr>
+        <tr>
+            <td>Administration</td>
+            <td>Read and write</td>
+        </tr>
+        <tr>
+            <td>Checks</td>
+            <td>Read and write.</td>
+        </tr>
+        <tr>
+            <td>Commit Statuses</td>
+            <td>Read and write</td>
+        </tr>
+        <tr>
+            <td>Contents</td>
+            <td>Read and write</td>
+        </tr>
+        <tr>
+            <td>Issues</td>
+            <td>Read and write</td>
+        </tr>
+        <tr>
+            <td>Metadata</td>
+            <td>Read-only</td>
+        </tr>
+        <tr>
+            <td>Pull requests</td>
+            <td>Read and write</td>
+        </tr>
+        <tr>
+            <td>Webhooks</td>
+            <td>Read and write</td>
+        </tr>
     </tbody>
 </table>
 
@@ -123,15 +123,15 @@
 </p>
 <table class="full">
     <thead>
-    <tr>
-        <td>Permission</td>
-        <td>Access</td>
-    </tr>
+        <tr>
+            <td>Permission</td>
+            <td>Access</td>
+        </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>Email address</td>
-        <td>Read-only</td>
+        <tr>
+            <td>Email address</td>
+            <td>Read-only</td>
         </tr>
     </tbody>
 </table>
@@ -142,16 +142,18 @@
 </p>
 <table class="full">
     <thead>
-    <tr>
-        <td>Event</td>
-        <td></td>
-        <td></td>
-    </tr>
+        <tr>
+            <td>Event</td>
+            <td></td>
+            <td></td>
+        </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>Pull request</td> <td>Push</td> <td></td>
-    </tr>
+        <tr>
+            <td>Pull request</td>
+            <td>Push</td>
+            <td></td>
+        </tr>
     </tbody>
 </table>
 
