--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -2662,7 +2662,7 @@ public class Main {
         <li>
             Now, you <b>must return a response</b> such as <code>return context.res.send("")</code>.
             This prevents confusing errors when functions are terminated prematurely before a response is sent.
-            <a href="/docs/functions-develop#response">Learn about response.</a>
+            <a href="#response">Learn about response.</a>
         </li>
         <li>
             Some variables about how a function was triggered are now found in the <code>context.req</code> object as <a href="/docs/functions-develop#request">headers</a>.
