add a section about existing apps

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -197,6 +197,13 @@
 
 <p><a href="/docs/environment-variables"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn more about environment variables</a></p>
 
+<h3><a href="#existing-apps" id="existing-apps">Update Existing GitHub Apps</a></h3>
+<p>
+    If you're editing existing GitHub apps, there are additional steps.
+    Everytime you update your GitHub app's setting, GitHub will prompt you to review the changes.
+    You will receive an email and you'll find a prompt under <b>Settings</b> > <b>Integrations</b> > <b>Applications</b> > <b>Installed GitHub Apps</b> > find your GitHub app > <b>Configure</b>.
+    You need accept the change so they're applied to your app.
+</p>
 
 <h2><a href="#functions" id="functions">Configure Function Runtimes</a></h2>
 <p>
