--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -199,7 +199,7 @@
 
 <h3><a href="#existing-apps" id="existing-apps">Update Existing GitHub Apps</a></h3>
 <p>
-    If you're editing existing GitHub apps, there are additional steps.
+    There are additional steps if you're updating permissions in existing GitHub apps.
     Every time you update your GitHub app's permissions, GitHub will prompt you to review the changes.
     You will receive an email and you'll find a prompt under <b>Settings</b> > <b>Integrations</b> > <b>Applications</b> > <b>Installed GitHub Apps</b> > find your GitHub app > <b>Configure</b>.
     You need accept the change so they're applied to your app.
