--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -202,7 +202,7 @@
     There are additional steps if you're updating permissions in existing GitHub apps.
     Every time you update your GitHub app's permissions, GitHub will prompt you to review the changes.
     You will receive an email and you'll find a prompt under <b>Settings</b> > <b>Integrations</b> > <b>Applications</b> > <b>Installed GitHub Apps</b> > find your GitHub app > <b>Configure</b>.
-    You need accept the change so they're applied to your app.
+    You need to accept the new permissions so they're applied to your app.
 </p>
 
 <h2><a href="#functions" id="functions">Configure Function Runtimes</a></h2>
