--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -28,7 +28,7 @@
 
 <p>
     For automatic Git deployment to work, Appwrite needs to receive communication from GitHub, this means your Appwrite project must be accessible on the internet.
-    If you're running on <code>localhost</code>, you need to run a proxy like <b>ngrok</b>.
+    If you're running on <code>localhost</code>, you need to run a proxy like <a href="https://ngrok.com/" target="_blank" rel="noopener">ngrok</a>.
 </p>
 
 <h3><a href="#callback" id="callback">Callback URL</a></h3>
@@ -67,7 +67,7 @@
 
 <p>
     If you're running Appwrite on <code>localhost</code>, GitHub can't send requests to Appwrite through webhooks and automatic deployments won't work.
-    You'll need host Appwrite on a server or use a proxy like <a href="https://ngrok.com/">ngrok</a> to make Appwrite accessible to GitHub.
+    You'll need host Appwrite on a server or use a proxy like <a href="https://ngrok.com/" target="_blank" rel="noopener">ngrok</a> to make Appwrite accessible to GitHub.
 </p>
 
 <h3><a href="#repository-permission" id="repository-permission">Repository Permissions</a></h3>
