Adaptor -> Adapter miss spelt

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -11,7 +11,7 @@
 
 <h2><a href="/docs/databases#databases" id="databases">Create Your Databases</a></h2>
 <p>
-    Appwrite's Databases Service allows you to create multiple databases. Each database can contain many collections and can be backed by a different database adaptor in future versions.
+    Appwrite's Databases Service allows you to create multiple databases. Each database can contain many collections and can be backed by a different database adapter in future versions.
 </p>
 
 <p>
