--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -53,7 +53,7 @@
 </table>
 
 <p>
-    Also select the <b>Request user authentication (OAuth) during installation</b> box.
+    Also, check the <b>Request user authentication (OAuth) during installation</b> box.
 </p>
 
 <h3><a href="#post-install" id="post-install">Post Installation</a></h3>
