--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -184,7 +184,7 @@
     <tr>
         <td>_APP_DOMAIN_TARGET</td>
         <td>
-            A DNS A-record hostname to serve as a CNAME target for your Appwrite custom domains. 
+            A hostname to serve as a CNAME target for your Appwrite custom domains. 
             You can use the same value as used for the Appwrite <code>_APP_DOMAIN</code> variable.
             If you're using a proxy for <b>localhost development</b>, such as <a href="https://ngrok.com/" target="_blank" rel="noopener">ngrok</a>, this will be the domain of your localhost proxy, such as <code>dd65-2405-201-4013-d8d7-b4c5-fb73-39f9-285c.ngrok.io</code>.
         </td>
