--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -175,7 +175,7 @@
     <tr>
         <td>_APP_DOMAIN</td>
         <td>
-            Your Appwrite domain address. 
+            Your main Appwrite domain used to access the Appwrite Console. 
             When setting a public suffix domain, Appwrite will attempt to issue a valid SSL certificate automatically. 
             When used with a dev domain, Appwrite will assign a self-signed SSL certificate.
             If you're using a proxy for <b>localhost development</b>, such as <a href="https://ngrok.com/" target="_blank" rel="noopener">ngrok</a>, this will be the domain of your localhost proxy.
