--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -192,7 +192,8 @@
     <tr>
         <td>_APP_DOMAIN_FUNCTIONS</td>
         <td>
-            [@steven @khushboo help]
+            This will be used for <a href="/docs/functions-deploy#domains">Function Domains</a>. When a function domain is generated, it will be <code>[UNIQUE_ID].[_APP_DOMAIN_FUNCTIONS]</code>.
+            You can use the same value as used for the Appwrite <code>_APP_DOMAIN</code> variable.
         </td>
     </tr>
     <tr>
