--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -98,6 +98,10 @@
         <td>Role.member([MEMBERSHIP_ID])</td>
         <td>Grants access to a specific member of a team. When the member is removed from the team, they will no longer have access.</td>
     </tr>
+    <tr>
+        <td>Role.label([LABEL_ID])</td>
+        <td>Grants access to all accounts with a specific label ID. Once the label is removed from the user, they will no longer have access. <a href="/docs/authentication-management#labels">Learn more about labels</a>.</td>
+    </tr>
     </tbody>
 </table>
 
