Add missing code tags to swift and dotnet dependency command

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -1609,7 +1609,7 @@ namespace runtime {
             </td>
             <td><b>Swift</b></td>
             <td><a href="https://swift.org/package-manager/" target="_blank">Swift Package Manager</a></td>
-            <td>swift package resolve</td>
+            <td><code>swift package resolve</code></td>
         </tr>
         <tr>
             <td>
@@ -1617,7 +1617,7 @@ namespace runtime {
             </td>
             <td><b>.NET</b></td>
             <td><a href="https://www.nuget.org/" target="_blank">NuGet</a></td>
-            <td>dotnet restore</td>
+            <td><code>dotnet restore</code></td>
         </tr>
         <tr>
             <td>
