Update _APP_VCS_GITHUB_PRIVATE_KEY docs to give a clear example
An example is helpful because some people were putting the SHA256 of
their key instead of the actual key.

It's important for the value to be in 1 line because, as of today, the
upgrade only handles the .env file one line at a time.

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -204,7 +204,7 @@
     </tr>
     <tr>
         <td>_APP_VCS_GITHUB_PRIVATE_KEY</td>
-        <td>GitHub app RSA private key. You can generate private keys from GitHub application settings.</td>
+        <td>RSA private key from GitHub wrapped with double quotes and newlines replaced with <code>\n</code> like <code>"-----BEGIN RSA PRIVATE KEY-----\nMIIEogIBAAKCAQEAuT8f3lo/X83hfvb0ZN/KD2pl86o/jl3ywKrkj/PQZBmtEv/z\nIugE//sfFoHWc4cizkcji+n3FNU+GEdvMioKuJlPBqPTY8hAbVn7R0geZLpDV/rs\n[...]\n-----END RSA PRIVATE KEY-----"</code>. You can generate private keys from GitHub application settings.</td>
     </tr>
     <tr>
         <td>_APP_VCS_GITHUB_APP_ID</td>
