--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -31,6 +31,12 @@
     If you're running on <code>localhost</code>, you need to run a proxy like <a href="https://ngrok.com/" target="_blank" rel="noopener">ngrok</a>.
 </p>
 
+<h3><a href="#github-app-name" id="github-app-name">GitHub App name</a></h3>
+
+<p>
+    The GitHub App name will be displayed when connecting Appwrite to GitHub. In addition, this name will be transformed to a slug ("My GitHub App" will become "my-github-app") and appear in the URL when accessing your app in GitHub. This slug should be set as the <code>_APP_VCS_GITHUB_APP_NAME</code> environment variable in Appwrite.
+</p>
+
 <h3><a href="#callback" id="callback">Callback URL</a></h3>
 <p>
     GitHub will use <b>callback URLs</b> to redirect users back to Appwrite. 
