Add homepage URL to Configuring GitHub app for completness
It's also helpful to point out this can be anything the user wants.

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -37,6 +37,12 @@
     The GitHub App name will be displayed when connecting Appwrite to GitHub. In addition, this name will be transformed to a slug ("My GitHub App" will become "my-github-app") and appear in the URL when accessing your app in GitHub. This slug should be set as the <code>_APP_VCS_GITHUB_APP_NAME</code> environment variable in Appwrite.
 </p>
 
+<h3><a href="#github-homepage-url" id="github-homepage-url">Homepage URL</a></h3>
+
+<p>
+The homepage URL will appear when looking at the public page of your app. It can be any URL you'd like.
+</p>
+
 <h3><a href="#callback" id="callback">Callback URL</a></h3>
 <p>
     GitHub will use <b>callback URLs</b> to redirect users back to Appwrite. 
