Update Callback URL for Configuring GitHub app
Emphasize the importance of the order since an incorrect order won't
work.

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -46,7 +46,7 @@ The homepage URL will appear when looking at the public page of your app. It can
 <h3><a href="#callback" id="callback">Callback URL</a></h3>
 <p>
     GitHub will use <b>callback URLs</b> to redirect users back to Appwrite. 
-    Set these callback URLs under <b>Identifying and authorizing users</b>.
+    Set these callback URLs under <b>Identifying and authorizing users</b> in the same order as listed below.
 </p>
 <table class="full">
     <thead>
