Add Where can this GitHub App be installed? to Configuring GitHub app
This is important to allow GitHub installation across multiple Appwrite
projects.

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -173,6 +173,12 @@ The homepage URL will appear when looking at the public page of your app. It can
     </tbody>
 </table>
 
+<h3><a href="#github-where-installed" id="github-where-installed">Where can this GitHub App be installed?</a></h3>
+
+<p>
+    Check the <b>Any account</b> box under <b>Where can this GitHub App be installed?</b> section. This is important to allow you to install the GitHub app on multiple Appwrite projects.
+</p>
+
 <h3><a href="#github-variables" id="github-variables">Environment Variables</a></h3>
 <p>After creating your app, you'll have to configure the following environment variables.</p>
 
