Fix link to domains

--- a/app/views/docs/functions-execute.phtml
+++ b/app/views/docs/functions-execute.phtml
@@ -23,7 +23,7 @@ use Appwrite\Utopia\View;
 </div>
 
 <p>
-    Alternatively you can <a href="/docs/functions-deploy#domain">add a custom domain</a> to your Appwrite Function. 
+    Alternatively you can <a href="/docs/functions-deploy#domains">add a custom domain</a> to your Appwrite Function. 
 </p>
 
 <h2><a href="#rest" id="rest">REST API</a></h2>
